# CppProjectDemo

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
Toolchains/: arm32-cross-toolchain.cmake
cmake/: AddGitSubmodule.cmake  Sanitizer.cmake  Tools.cmake  Warnings.cmake
configuration/: CMakeLists.txt  config.h.in
dockerfile/: Dockerfile
docs/: Doxyfile
sensor_data/: sensor_data.json
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/include/custom_lib/: my_lib.h
src/lib/: CMakeLists.txt  my_lib.cpp
src/lib/custom_lib/: CMakeLists.txt  my_lib.cpp
src/lib/gtest_samples/: CMakeLists.txt  sample1.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/custom_lib/: CMakeLists.txt  my_lib.cpp
tests/unit/gtest_samples/: CMakeLists.txt  sample1_unittest.cpp
